# sandbox-tf-deployment

./: licenses.md  pyproject.toml
notebooks/: client.ipynb  detecting_objects.ipynb
src/: server_app.py
