[tool.poetry]
authors = ["Jean Metz"]
description = "Deploying Deep Learning Models"
name = "deep_learning_deployment"
version = "0.0.1"

[tool.poetry.dependencies]
python = "3.10.8"
tensorflow = "2.14.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pydantic = "^2.6.1"
pillow = "^10.2.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"
pip = "^24.0"
opencv-python-headless = "^4.9.0.80"
opencv-python = "^4.9.0.80"
cvlib = "^0.2.7"


[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
ipdb = "^0.13.13"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-sugar = "^1.0.0"
ruff = "^0.2.2"
pipdeptree = "^2.14.0"
prettytable = "^3.10.0"

[tool.poetry.group.notebook.dependencies]
tqdm = "^4.66.2"
ipykernel = "^6.29.2"
perfplot = "^0.10.2"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.2"
psutil = "^5.9.8"
jupyterlab = "^4.1.2"



[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.3.4"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [# Enable
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 92



[tool.pytest.ini_options]
#addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
